--- a/OnlineShop/index.html
+++ b/OnlineShop/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<link rel="stylesheet" href="./dist/css/main.css">
 	<link rel="stylesheet" href="./dist/library/fontawesome/all.min.css">
-	<link rel="stylesheet" href="./dist/css/main.css">
+	<link id="style" rel="stylesheet" href="./dist/css/main.css">
 </head>
 <body>
 
@@ -1184,8 +1184,7 @@
 		</section>
 		<section class="bottom-form">
 			<div class="container d-flex justify-content-center">
-				<div class="row">
-					<div class="col-12">
+		
 						<form class="form-inline" action="#">
 							<label class="bottom-form-label" for="bf_email">NEWSLETTER:</label>
 							<span class="bottom-form-icon"><i class="fas fa-envelope"></i></span>
@@ -1195,8 +1194,7 @@
 							<button type="submit"
 									class="btn btn-outline-light bottom-form-btn"><i class="fas fa-arrow-right"></i></button>
 						</form>
-					</div>
-				</div>
+		
 			</div>
 		</section>
 		<section class="footer">
@@ -1279,6 +1277,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script src="./dist/js/main.js"></script>
+<script id="js" src="./dist/js/main.js"></script>
 </body>
 </html>
