--- a/OnlineShop/index.html
+++ b/OnlineShop/index.html
@@ -258,7 +258,7 @@
 						<div class="products-catalog p-0 m-0">
 							<div class="row d-flex justify-content-between p-0 m-0">
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_1  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -290,7 +290,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_2  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -323,7 +323,7 @@
 		
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_3  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -355,7 +355,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-md-block">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_4  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -387,7 +387,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_5  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -419,7 +419,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_6  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -451,7 +451,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_7  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -483,7 +483,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_8  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
@@ -515,7 +515,7 @@
 									</div>
 								</div>
 								<div class="products-catalog-item p-0 col-12 col-md-6 col-lg-3 d-none d-lg-block">
-									<div class="card">
+									<div class="card" style="width: 14rem;">
 										<div class="products-img-card_9  products-img">
 											<div class="products-card-btn">
 												<a href="#" type="button" class="btn btn-prod-details"
