--- a/OnlineShop/index.html
+++ b/OnlineShop/index.html
@@ -1034,7 +1034,7 @@
 					<div class="col text-center">
 						<div class="blog-carousel owl-carousel owl-theme">
 							<div class="item">
-								<div class="card" style="width:360px">
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_1">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1050,7 +1050,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" style="width:360px">
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_2">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1066,7 +1066,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" ">
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_3">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1082,7 +1082,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" >
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_1">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1098,7 +1098,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" >
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_2">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1114,7 +1114,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" >
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_3">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1130,7 +1130,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" >
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_1">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1146,7 +1146,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" >
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_2">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
@@ -1162,7 +1162,7 @@
 								</div>
 							</div>
 							<div class="item">
-								<div class="card" >
+								<div class="card" style="width: 20rem;">
 									<div class="card-img-top card_3">
 										<div class="card-blank">
 											<div><i class="fas fa-calendar-alt"></i> 15 jan 2016</div>
