--- a/OnlineShop/index.html
+++ b/OnlineShop/index.html
@@ -15,7 +15,15 @@
 <!-- Section NAVBAR -->
 
 
-<section class="navbar-top">
+<section class="navbar-top"> 
+    <div id="to-top">
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+       <span></span>
+    </div>
+    <div id="home"><a name="top" href="#"></a></div>
     <div class="container">
         <nav class="navbar navbar-expand navbar-dark bg-dark">
             <ul class="navbar-nav mr-auto">
@@ -170,7 +178,6 @@
         <div class="modal fade modal" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog" role="document">
                 <div class="modal-content  modal-wrapper-empty">
-
                     <div class="modal-body  modal-body-class-empty">
                         <button class="close p-3 text-white" data-dismiss="modal">×</button>
                         <p class="modal-window-header text-center mb-2">Your cart is empty</p>
@@ -192,9 +199,8 @@
             <div class="cart col-4 d-flex justify-content-end">
                 <a href="#" class="cart d-flex align-items-center justify-content-end" data-toggle="modal" data-target="#exampleModal">
                     <img class="rounded" src="./src/images/logos/card_icon.png">
-                    <div id="cardCountItem" class="my-card-items-count rounded-circle bg-dark text-white">1</div>
+                    <div id="cardCountItem" class="my-card-items-count rounded-circle bg-dark text-white">0</div>
                 </a>
-
             </div>
         </div>
     </div>
@@ -214,8 +220,7 @@
             </form>
 
             <!-- Toggler/collapsibe Button -->
-            <div class="navbar-toggler mb-4"  data-toggle="collapse" data-target="#collapsibleNavbar">
-                <!-- <span class="navbar-toggler-icon"></span> -->
+            <div class="navbar-toggler mb-4"  data-toggle="collapse" data-target="#collapsibleNavbar">                
                 <span></span>
                 <span></span>
                 <span></span>
@@ -1088,9 +1093,9 @@
                       <div class="gallery-right  d-none d-lg-block  border h-100">
                         <div class=" flex-column px-5">
                             <div class="py-5">
-                                <span class="from py-2">FROM<span class="fromPrice">$50.80</span></span>
-                                <div class="badroom py-2">Badroom Bed</div>
-                                <button type="button" class="btn button-shop py-2">shop now</button>
+                                <span class="from py-2">FROM</span><span class="fromPrice">$50.80</span>
+                                <div class="bedroom py-2">Bedroom Bed</div>
+                                <button class="btn button-shop py-2">shop now</button>
                             </div>
                             <img src="./src/images/product/bed.png" alt="" class="py-2 w-100">
                         </div>
@@ -1100,7 +1105,7 @@
                   </div> 
             
         </div>
-
+</div>
 </section>
 <section class="blog">
 	<div class="container">
