Update and rename OnlineShop/index.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 	<meta name="viewport"
 		  content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-	<link rel="stylesheet" href="./dist/css/main.css">
-	<link rel="stylesheet" href="./dist/library/fontawesome/all.min.css">
-	<link id="style" rel="stylesheet" href="./dist/css/main.css">
+	<link rel="stylesheet" href="./OnlineShop/dist/css/main.css">
+	<link rel="stylesheet" href="./OnlineShop/dist/library/fontawesome/all.min.css">
+	<link id="style" rel="stylesheet" href="./OnlineShop/dist/css/main.css">
 </head>
 <body>
 
@@ -1422,6 +1422,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-<script id="js" src="./dist/js/main.js"></script>
+<script id="js" src="./OnlineShop/dist/js/main.js"></script>
 </body>
 </html>
