--- a/index.html
+++ b/index.html
@@ -244,11 +244,11 @@
     
     <div class="container">
         <div class="row d-flex align-items-center">
-            <div class="phone col-4 d-flex align-items-center"><a><img class="d-none d-md-block mr-2  icon-tel" src="./dist/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></a></div>
-            <a class="col-4 d-flex justify-content-center"><img src="./dist/images/logos/logo.png" alt="logo image"></a>
+            <div class="phone col-4 d-flex align-items-center"><a><img class="d-none d-md-block mr-2  icon-tel" src="./OnlineShop/dist/images/logos/tel_icon.png"><span>2300 - 3560 - 222</span></a></div>
+            <a class="col-4 d-flex justify-content-center"><img src="./OnlineShop/dist/images/logos/logo.png" alt="logo image"></a>
             <div class="cart col-4 d-flex justify-content-end">
                 <a href="#" class="cart d-flex align-items-center justify-content-end" data-toggle="modal" data-target="#exampleModal">
-                    <img class="rounded" src="./dist/images/logos/card_icon.png">
+                    <img class="rounded" src="./OnlineShop/dist/images/logos/card_icon.png">
                     <div id="cardCountItem" class="my-card-items-count rounded-circle bg-dark text-white">0</div>
                 </a>
             </div>
@@ -326,10 +326,10 @@
 
                 <div class="carousel-item active">
 
-                    <img src="./dist/images/top-slider/1.jpg" class="d-block w-100" alt="...">
+                    <img src="./OnlineShop/dist/images/top-slider/1.jpg" class="d-block w-100" alt="...">
                 </div>
                 <div class="carousel-item">
-                    <img src="./dist/images/top-slider/2.jpg" class="d-block w-100" alt="...">
+                    <img src="./OnlineShop/dist/images/top-slider/2.jpg" class="d-block w-100" alt="...">
                 </div>
             </div>
             <div class="controls">
@@ -1097,23 +1097,23 @@
                         <div class="tab-pane fade show active" id="featured" role="tabpanel"
                             aria-labelledby="featured-tab">
                             <div class="review-container active" data-set="1">
-                                <img class="avatar"  data-whatever="10" src="./dist/images/gallery/10.png"
+                                <img class="avatar"  data-whatever="10" src="./OnlineShop/dist/images/gallery/10.png"
                                      alt="gallery-image">
                             </div>
                             <div class="review-container" data-set="2">
-                                <img class="avatar" data-whatever="11" src="./dist/images/gallery/11.png"
+                                <img class="avatar" data-whatever="11" src="./OnlineShop/dist/images/gallery/11.png"
                                      alt="gallery-image">
                             </div>
                             <div class="review-container" data-set="3">
-                                <img class="avatar" data-whatever="12" src="./dist/images/gallery/12.png"
+                                <img class="avatar" data-whatever="12" src="./OnlineShop/dist/images/gallery/12.png"
                                      alt="gallery-image">
                             </div>
                             <div class="review-container" data-set="4">
-                                <img class="avatar" data-whatever="13" src="./dist/images/gallery/13.png"
+                                <img class="avatar" data-whatever="13" src="./OnlineShop/dist/images/gallery/13.png"
                                      alt="gallery-image">
                             </div>
                             <div class="review-container" data-set="5">
-                                <img class="avatar" data-whatever="14" src="./dist/images/gallery/14.png"
+                                <img class="avatar" data-whatever="14" src="./OnlineShop/dist/images/gallery/14.png"
                                      alt="gallery-image">
                             </div>
                             <div class="bottom-slider  w-100">
@@ -1121,15 +1121,15 @@
                               <div class="row">
                                 <div class="wrapper-slider d-flex row-no-wrap">
                                     <button class="btn-left"> <i class="fas fa-chevron-left arrow"></i> </button>
-                                    <img class="img-slider col-2 zoom" data-set="1" src="./dist/images/gallery/10.png"
+                                    <img class="img-slider col-2 zoom" data-set="1" src="./OnlineShop/dist/images/gallery/10.png"
                                         alt="gallery-image">
-                                    <img class="img-slider col-2" data-set="2" src="./dist/images/gallery/11.png"
+                                    <img class="img-slider col-2" data-set="2" src="./OnlineShop/dist/images/gallery/11.png"
                                         alt="gallery-image">
-                                    <img class="img-slider col-2" data-set="3" src="./dist/images/gallery/12.png"
+                                    <img class="img-slider col-2" data-set="3" src="./OnlineShop/dist/images/gallery/12.png"
                                         alt="gallery-image">
-                                    <img class="img-slider col-2" data-set="4" src="./dist/images/gallery/13.png"
+                                    <img class="img-slider col-2" data-set="4" src="./OnlineShop/dist/images/gallery/13.png"
                                         alt="gallery-image">
-                                    <img class="img-slider col-2" data-set="5" src="./dist/images/gallery/14.png"
+                                    <img class="img-slider col-2" data-set="5" src="./OnlineShop/dist/images/gallery/14.png"
                                         alt="gallery-image">
                                     <button class="btn-right next"> <i class="fas fa-chevron-right arrow"></i>
                                     </button>
@@ -1159,7 +1159,7 @@
                                 <div class="bedroom py-2">Bedroom Bed</div>
                                 <button class="btn button-shop py-2">shop now</button>
                             </div>
-                            <img src="./dist/images/product/bed.png" alt="" class="py-2 w-100">
+                            <img src="./OnlineShop/dist/images/product/bed.png" alt="" class="py-2 w-100">
                         </div>
     
                       </div>
@@ -1383,11 +1383,11 @@
 					<li class="footer-list-item">
 						<div class="container-fluid">
 							<div class="row d-flex flex-wrap">
-								<img class="footer-cards-container" src="./dist/images/cards/visa.png" alt="visa card">
-								<img class="footer-cards-container" src="./dist/images/cards/master-card.png" alt="master card">
-								<img class="footer-cards-container" src="./dist/images/cards/dacover.png" alt="dacover">
-								<img  class="footer-cards-container" src="./dist/images/cards/blue-card.png" alt="american express">
-								<img  class="footer-cards-container" src="./dist/images/cards/paypal.png" alt="pay pal">
+								<img class="footer-cards-container" src="./OnlineShop/dist/images/cards/visa.png" alt="visa card">
+								<img class="footer-cards-container" src="./OnlineShop/dist/images/cards/master-card.png" alt="master card">
+								<img class="footer-cards-container" src="./OnlineShop/dist/images/cards/dacover.png" alt="dacover">
+								<img  class="footer-cards-container" src="./OnlineShop/dist/images/cards/blue-card.png" alt="american express">
+								<img  class="footer-cards-container" src="./OnlineShop/dist/images/cards/paypal.png" alt="pay pal">
 							</div>
 						</div>
 					</li>
